--- a/client/views/settings.html
+++ b/client/views/settings.html
@@ -1,5 +1,3 @@
 <div sd-settings-view>
-    <div class="split-content">
-        <h1>Planning settings</h1>
-    </div>
+    <sd-planning-settings/>
 </div>
